objects/delphiDemo__MachineLearningRecord__c.object
<CustomObject>
    <description>MachineLearningRecord object  used to save opprtunity time for each stage</description>
    <fields>
        <fullName>delphiDemo__Batch_Date_Time__c</fullName>
        <description>use to store batch execution date</description>
        <label>Batch Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Counter__c</fullName>
        <description>use to store number of counts of opportunity in a particular stage</description>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Stage_Name__c</fullName>
        <description>use to store opprtunity stage name</description>
        <label>Stage Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Time_Duration__c</fullName>
        <description>use to store opportunity stages time duration</description>
        <label>Time Duration</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>delphiDemo__timePeriodFlow__c</fullName>
        <label>timePeriodFlow</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>MachineLearningRecord</label>
    <listViews>
        <fullName>delphiDemo__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MachineLearningRecord Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MachineLearningRecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>